# this-is-variant-music-api

./: .gitignore  LICENSE  MusicRecommendation.cs  Program.cs  README.md  Startup.cs  storage.example.json  this-is-variant-music-api.csproj
Azure/rust-function/: Cargo.toml  host.json  local.settings.json
Azure/rust-function/src/functions/: hello.rs  link_ingester.rs  mod.rs
Azure/rust-function/src/helper/: link_parser.rs  mod.rs  spotify_fetcher.rs
Controllers/: RecommendationController.cs
Properties/: launchSettings.json
Storage/: TableRow.cs  TableStore.cs  TableStoreConfig.cs
