[package]
name = "musicfunc"
version = "0.1.0"
authors = ["Mathias Flått <mathiasflaatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
chrono = "0.4.19"
aspotify = "0.7.0"
azure-functions = "0.2.6"
log = "0.4.2"
